# inarbit-cursor

./: .gitignore  QUICKSTART.md  diagnose.py  docker-compose.yml  init_system.py  integration_test_results.txt  quick_test.py  run_debug_server.py  run_minimal.py  run_server_debug.py  start_server.py  test_db_connection.py  test_logic_optimization.py  test_system_init.py
.agent/workflows/: continue-task.md  global-task.md
.cursor/: api_port.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.windsurf/rules/: inarbit-task-plan.md
_backup/: package.json
client/: .env.example  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx  index.css  main.jsx
config/: risk.yaml
docs/: README.md  configuration_catalog.md  deployment_report_20260202.md  final_delivery_20260130.md  final_summary_20260130.md  implementation_plan.md  opportunity_config_api_examples.md  ops_runbook.md  optimization_plan_20260202.md  progress_checkpoint_20260203.md  system_report_20260203.md  walkthrough.md
engine/: Cargo.toml
engine/src/: config.rs  db.rs  exchange.rs  executor.rs  main.rs  risk.rs  strategy.rs
scripts/: backup_local.ps1  db_integrity_check.py  git_ssh_443.ps1
server/: .env.example  .gitignore  app.py  auth.py  config.py  diag_db.py  diag_output.txt  diag_output_2.txt  requirements-dev.txt  requirements.txt  risk_manager.py  risk_manager_backup.py  test_binance.py  test_env.py
server/api/: __init__.py  arbitrage_routes.py  auth_routes.py  bot_control_routes.py  config_routes.py  (+13 more)
tests/: ui_smoke_test.py
(+83 files in other folders)
