[package]
name = "inarbit-engine"
version = "0.1.0"
edition = "2021"
description = "高性能加密货币套利引擎"
authors = ["Inarbit Team"]

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# HTTP 客户端
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 数据库（升级依赖，避免 Rust 2024 不兼容）
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Redis（升级依赖，避免 Rust 2024 不兼容）
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }

# 加密
ring = "0.17"
base64 = "0.21"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 命令行参数
clap = { version = "4", features = ["derive"] }

# 配置
config = "0.13"
dotenv = "0.15"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 异步 trait
async-trait = "0.1"

# 其他
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "inarbit-engine"
path = "src/main.rs"
